data source selection moved to general settings widget

--- a/GUIs/w7xPyViewerLayout.ui
+++ b/GUIs/w7xPyViewerLayout.ui
@@ -2,26 +2,26 @@
 <ui version="4.0">
  <class>w7xPyViewer</class>
  <widget class="QMainWindow" name="w7xPyViewer">
-     <property name="geometry">
-         <rect>
-             <x>0</x>
-             <y>0</y>
-             <width>618</width>
-             <height>402</height>
-         </rect>
-     </property>
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>618</width>
+    <height>402</height>
+   </rect>
+  </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
-     <property name="minimumSize">
-         <size>
-             <width>618</width>
-             <height>402</height>
-         </size>
-     </property>
+  <property name="minimumSize">
+   <size>
+    <width>618</width>
+    <height>402</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>w7xPyViewer</string>
   </property>
@@ -29,12 +29,12 @@
    <property name="enabled">
     <bool>true</bool>
    </property>
-      <property name="minimumSize">
-          <size>
-              <width>618</width>
-              <height>382</height>
-          </size>
-      </property>
+   <property name="minimumSize">
+    <size>
+     <width>618</width>
+     <height>382</height>
+    </size>
+   </property>
    <property name="sizeIncrement">
     <size>
      <width>0</width>
@@ -53,19 +53,19 @@
       <property name="minimumSize">
        <size>
         <width>600</width>
-           <height>20</height>
+        <height>20</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>600</width>
-           <height>20</height>
+        <height>20</height>
        </size>
       </property>
       <widget class="QPushButton" name="replaceWithSGF">
        <property name="geometry">
         <rect>
-            <x>240</x>
+         <x>240</x>
          <y>0</y>
          <width>50</width>
          <height>20</height>
@@ -90,7 +90,7 @@
       <widget class="QPushButton" name="settings_btn">
        <property name="geometry">
         <rect>
-            <x>0</x>
+         <x>0</x>
          <y>0</y>
          <width>60</width>
          <height>20</height>
@@ -140,7 +140,7 @@
       <widget class="QPushButton" name="subtractSGF">
        <property name="geometry">
         <rect>
-            <x>184</x>
+         <x>184</x>
          <y>0</y>
          <width>50</width>
          <height>20</height>
@@ -165,7 +165,7 @@
       <widget class="QCheckBox" name="applySGF">
        <property name="geometry">
         <rect>
-            <x>134</x>
+         <x>134</x>
          <y>0</y>
          <width>50</width>
          <height>20</height>
@@ -190,7 +190,7 @@
       <widget class="QLabel" name="mouseXY_UI">
        <property name="geometry">
         <rect>
-            <x>310</x>
+         <x>310</x>
          <y>0</y>
          <width>250</width>
          <height>20</height>
@@ -249,16 +249,14 @@
      <x>0</x>
      <y>0</y>
      <width>618</width>
-        <height>20</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>Data</string>
     </property>
-    <addaction name="actionOpen_mdsplus"/>
-       <addaction name="actionOpen_csv"/>
-    <addaction name="actionOpen_LGraph"/>
+    <addaction name="actionOpen_Source"/>
     <addaction name="separator"/>
     <addaction name="actionExport_time_to_separate_file"/>
     <addaction name="actionExport_to_csv"/>
@@ -305,17 +303,17 @@
     <string>Export to csv (time separate)</string>
    </property>
   </action>
-     <action name="actionOpen_csv">
+  <action name="actionOpen_csv">
    <property name="text">
-       <string>Open_csv</string>
+    <string>Open_csv</string>
    </property>
    <property name="toolTip">
     <string>store full first column as X</string>
    </property>
   </action>
-  <action name="actionOpen_LGraph">
+  <action name="actionOpen_Source">
    <property name="text">
-    <string>Open_LGraph</string>
+    <string>Open_Source</string>
    </property>
   </action>
  </widget>
