--- a/GUIs/w7xPyViewerSettingsLayout.ui
+++ b/GUIs/w7xPyViewerSettingsLayout.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>610</width>
-    <height>230</height>
+    <width>660</width>
+    <height>260</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>610</width>
-    <height>230</height>
+    <width>660</width>
+    <height>260</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>610</width>
-    <height>230</height>
+    <width>660</width>
+    <height>260</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,27 +28,74 @@
   <property name="locale">
    <locale language="English" country="Germany"/>
   </property>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>0</x>
      <y>10</y>
-     <width>588</width>
-     <height>213</height>
+     <width>648</width>
+     <height>242</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="2" colspan="2">
+    <item row="0" column="0" alignment="Qt::AlignRight">
+     <widget class="QLabel" name="label_19">
+      <property name="minimumSize">
+       <size>
+        <width>90</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>90</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="sizeIncrement">
+       <size>
+        <width>0</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>data source</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QComboBox" name="dataSource_ui">
+      <item>
+       <property name="text">
+        <string>csv_txt</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>MDSPlus</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>LGraph2</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="1" column="2" colspan="2" alignment="Qt::AlignHCenter">
      <widget class="QLabel" name="label_21">
       <property name="minimumSize">
        <size>
-        <width>150</width>
+        <width>180</width>
         <height>20</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>150</width>
+        <width>180</width>
         <height>20</height>
        </size>
       </property>
@@ -68,7 +115,7 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0" alignment="Qt::AlignRight">
+    <item row="2" column="0" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_2">
       <property name="minimumSize">
        <size>
@@ -90,17 +137,17 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
+    <item row="2" column="1">
      <widget class="QLineEdit" name="shotNum_ui">
       <property name="minimumSize">
        <size>
-        <width>60</width>
+        <width>80</width>
         <height>20</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>60</width>
+        <width>80</width>
         <height>20</height>
        </size>
       </property>
@@ -115,11 +162,11 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="2" alignment="Qt::AlignRight">
+    <item row="2" column="2" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label">
       <property name="minimumSize">
        <size>
-        <width>120</width>
+        <width>150</width>
         <height>15</height>
        </size>
       </property>
@@ -137,7 +184,7 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="3">
+    <item row="2" column="3">
      <widget class="QLineEdit" name="treeName_ui">
       <property name="minimumSize">
        <size>
@@ -164,7 +211,7 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="0" alignment="Qt::AlignRight">
+    <item row="3" column="0" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_4">
       <property name="minimumSize">
        <size>
@@ -186,17 +233,17 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
+    <item row="3" column="1">
      <widget class="QLineEdit" name="startMdsplusTime_ui">
       <property name="minimumSize">
        <size>
-        <width>60</width>
+        <width>80</width>
         <height>20</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>60</width>
+        <width>80</width>
         <height>20</height>
        </size>
       </property>
@@ -213,7 +260,7 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="2" alignment="Qt::AlignRight">
+    <item row="3" column="2" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_5">
       <property name="minimumSize">
        <size>
@@ -235,7 +282,7 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="3">
+    <item row="3" column="3">
      <widget class="QLineEdit" name="endMdsplusTime_ui">
       <property name="minimumSize">
        <size>
@@ -262,17 +309,17 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="4" alignment="Qt::AlignRight">
+    <item row="3" column="4" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_22">
       <property name="minimumSize">
        <size>
-        <width>50</width>
+        <width>60</width>
         <height>15</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>50</width>
+        <width>60</width>
         <height>15</height>
        </size>
       </property>
@@ -284,7 +331,7 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="5">
+    <item row="3" column="5">
      <widget class="QLineEdit" name="deltaMdsplusTime_ui">
       <property name="minimumSize">
        <size>
@@ -311,7 +358,7 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="2" colspan="2">
+    <item row="4" column="2" colspan="2" alignment="Qt::AlignHCenter">
      <widget class="QLabel" name="label_23">
       <property name="minimumSize">
        <size>
@@ -341,7 +388,7 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
+    <item row="5" column="0" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_15">
       <property name="minimumSize">
        <size>
@@ -363,7 +410,7 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
+    <item row="5" column="1">
      <widget class="QCheckBox" name="applyDownsampling_ui">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -388,7 +435,7 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="2">
+    <item row="5" column="2" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_14">
       <property name="minimumSize">
        <size>
@@ -416,7 +463,7 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="3">
+    <item row="5" column="3">
      <widget class="QLineEdit" name="targetFrq_kHz_ui">
       <property name="minimumSize">
        <size>
@@ -443,17 +490,17 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="2" colspan="2">
+    <item row="6" column="2" colspan="2" alignment="Qt::AlignHCenter">
      <widget class="QLabel" name="label_24">
       <property name="minimumSize">
        <size>
-        <width>150</width>
+        <width>175</width>
         <height>20</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>150</width>
+        <width>175</width>
         <height>20</height>
        </size>
       </property>
@@ -473,17 +520,17 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="0" alignment="Qt::AlignRight">
+    <item row="7" column="0" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_17">
       <property name="minimumSize">
        <size>
-        <width>70</width>
+        <width>80</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>70</width>
+        <width>80</width>
         <height>15</height>
        </size>
       </property>
@@ -501,17 +548,17 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="1">
+    <item row="7" column="1">
      <widget class="QLineEdit" name="sgFilterWindow_ui">
       <property name="minimumSize">
        <size>
-        <width>60</width>
+        <width>80</width>
         <height>20</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>60</width>
+        <width>80</width>
         <height>20</height>
        </size>
       </property>
@@ -524,24 +571,24 @@
        <string>*SxxMax</string>
       </property>
       <property name="text">
-       <string>0.1</string>
+       <string>101</string>
       </property>
       <property name="placeholderText">
        <string/>
       </property>
      </widget>
     </item>
-    <item row="6" column="2" alignment="Qt::AlignRight">
+    <item row="7" column="2" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_18">
       <property name="minimumSize">
        <size>
-        <width>70</width>
+        <width>90</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>70</width>
+        <width>90</width>
         <height>15</height>
        </size>
       </property>
@@ -559,7 +606,7 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="3">
+    <item row="7" column="3">
      <widget class="QLineEdit" name="sgFilterPolyOrder_ui">
       <property name="minimumSize">
        <size>
@@ -589,14 +636,14 @@
       </property>
      </widget>
     </item>
-    <item row="7" column="0" colspan="7">
+    <item row="8" column="0" colspan="7">
      <widget class="Line" name="line_7">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
-    <item row="8" column="4">
+    <item row="9" column="4">
      <widget class="QPushButton" name="getFromUiApplyAndClose_btn">
       <property name="minimumSize">
        <size>
@@ -615,7 +662,7 @@
       </property>
      </widget>
     </item>
-    <item row="8" column="5">
+    <item row="9" column="5">
      <widget class="QPushButton" name="saveSettings_btn">
       <property name="minimumSize">
        <size>
@@ -634,7 +681,7 @@
       </property>
      </widget>
     </item>
-    <item row="8" column="6">
+    <item row="9" column="6">
      <widget class="QPushButton" name="resetSetings_btn">
       <property name="minimumSize">
        <size>
