--- a/GUIs/w7xPyViewerLayout.ui
+++ b/GUIs/w7xPyViewerLayout.ui
@@ -65,57 +65,35 @@
       <widget class="QPushButton" name="replaceWithSGF">
        <property name="geometry">
         <rect>
-         <x>240</x>
+         <x>150</x>
          <y>0</y>
-         <width>50</width>
+         <width>40</width>
          <height>20</height>
         </rect>
        </property>
        <property name="minimumSize">
         <size>
-         <width>50</width>
+         <width>40</width>
          <height>20</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>50</width>
+         <width>40</width>
          <height>20</height>
         </size>
+       </property>
+       <property name="toolTip">
+        <string>replace with Savitzky-Golay filter</string>
        </property>
        <property name="text">
         <string>=SGF</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="settings_btn">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>60</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>60</width>
-         <height>20</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>50</width>
-         <height>20</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>settings</string>
-       </property>
-      </widget>
       <widget class="QPushButton" name="drawSpectrogramUI">
        <property name="geometry">
         <rect>
-         <x>62</x>
+         <x>2</x>
          <y>0</y>
          <width>50</width>
          <height>20</height>
@@ -140,23 +118,26 @@
       <widget class="QPushButton" name="subtractSGF">
        <property name="geometry">
         <rect>
-         <x>184</x>
+         <x>110</x>
          <y>0</y>
-         <width>50</width>
+         <width>40</width>
          <height>20</height>
         </rect>
        </property>
        <property name="minimumSize">
         <size>
-         <width>50</width>
+         <width>40</width>
          <height>20</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>50</width>
+         <width>40</width>
          <height>20</height>
         </size>
+       </property>
+       <property name="toolTip">
+        <string>subtract Savitzky-Golay filter</string>
        </property>
        <property name="text">
         <string>-SGF</string>
@@ -165,7 +146,7 @@
       <widget class="QCheckBox" name="applySGF">
        <property name="geometry">
         <rect>
-         <x>134</x>
+         <x>60</x>
          <y>0</y>
          <width>50</width>
          <height>20</height>
@@ -183,6 +164,9 @@
          <height>20</height>
         </size>
        </property>
+       <property name="toolTip">
+        <string>show Savitzky-Golay filter</string>
+       </property>
        <property name="text">
         <string>SGF</string>
        </property>
@@ -190,7 +174,7 @@
       <widget class="QLabel" name="mouseXY_UI">
        <property name="geometry">
         <rect>
-         <x>310</x>
+         <x>280</x>
          <y>0</y>
          <width>250</width>
          <height>20</height>
@@ -261,7 +245,8 @@
     <addaction name="actionExport_time_to_separate_file"/>
     <addaction name="actionExport_to_csv"/>
     <addaction name="separator"/>
-    <addaction name="actionDrawPlots"/>
+    <addaction name="actionSettings"/>
+    <addaction name="separator"/>
     <addaction name="actionClear"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
@@ -270,7 +255,7 @@
   </widget>
   <action name="actionClear">
    <property name="text">
-    <string>ClearPlots</string>
+    <string>Clear</string>
    </property>
   </action>
   <action name="actionExit">
@@ -293,9 +278,9 @@
     <string>Open_mdsplus</string>
    </property>
   </action>
-  <action name="actionDrawPlots">
+  <action name="actionCheckUncheckAll">
    <property name="text">
-    <string>Draw</string>
+    <string>(Un)Check all</string>
    </property>
   </action>
   <action name="actionExport_time_to_separate_file">
@@ -313,7 +298,12 @@
   </action>
   <action name="actionOpen_Source">
    <property name="text">
-    <string>Open_Source</string>
+    <string>Open Source (Shift+o)</string>
+   </property>
+  </action>
+  <action name="actionSettings">
+   <property name="text">
+    <string>Settings (Shift+s)</string>
    </property>
   </action>
  </widget>
